Fix nav bar alignment

--- a/less/main.less
+++ b/less/main.less
@@ -1,5 +1,6 @@
 @import 'variables';
-//fonts
+
+//Fonts
 @font-face {
   font-family: 'Planet N';
   src: ufl('../fonts/planetn.ttf')
@@ -20,8 +21,8 @@
   margin-bottom: 1.2%;
   width: 85%;
   overflow: hidden;
-  transition:height 0.5s;
-  height:0px;
+  transition: height 0.4s;
+  height: 0px;
   .nav-link {
     color: #f4c844;
     font-family: 'roboto';
@@ -33,19 +34,19 @@
 }
 
 .show-mobile-menu {
-  height:120px;
-  transition:height 0.5s;
+  height: 120px;
+  transition: height 0.5s;
 }
+
 #hamburger {
-  display:block;
-  color:#e3001b;
+  display: block;
+  color: #e3001b;
   background-color: white;
-  margin:auto;
-  font-size:35px;
+  margin: auto;
+  font-size: 35px;
   text-decoration: none;
   border: 1px solid transparent;
 }
-
 
 //Footer All Pages
 footer {
@@ -329,6 +330,10 @@ ul {
 
   #hamburger {
     display:none;
+  }
+
+  .navbar {
+    justify-content: space-between;
   }
 }
 
